--- a/index.html
+++ b/index.html
@@ -5,11 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="main.js"></script>
+    <script src="script.js"></script>
+    <script src="calculator.js"></script>
+    <script src="microwave.js"></script>
+    <link rel="stylesheet" href="appcss/main.css">
 </head>
 <body>
     <!-- <button onclick="enterpill()">ادخل الفاتورة </button>
     <button onclick="enterdescount()"> خصم </button>
     <button onclick="enteradvantage()"> ضريبة</button> -->
-    
+     <button onclick="enternumber1()">enternum1</button>
+    <button onclick="enternumber2()">enternum2</button> 
+    <button onclick="summition()">+</button> 
+    <button onclick="subtract()">-</button> 
+    <button onclick="devition()">/</button> 
+    <button onclick="multiplication()">*</button>  
+    <div style="border:3px solid red; width: 200px; margin-top: 10px;">
+        <button  style="border:3px solid black; display: block; margin-bottom: 5px;" onclick="microwaveon()">ON</button>
+        <button onclick="timeon()"  style="border:3px solid blue; display: block; margin-bottom: 5px;">time</button>
+        <button onclick="microwaveoff()" style="border:3px solid #123; display: block;">OFF</button>
+    </div>
+    <!-- <button onclick="showphoneAndprice()">showphoneandpric</button>
+    <button onclick="addphone()">add phone</button>
+    <button onclick="addprice()">add price</button> -->
+    <!-- <button onclick="showtask()">showtasks</button>
+    <button onclick="removetask()">removetask</button> -->
 </body>
 </html>
