--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,11 +9,11 @@
     <script src="task13.js"></script>
     <link rel="stylesheet" href="appcss/main.css">
 </head>
-<body>
-    <!-- <button onclick="enterpill()">ادخل الفاتورة </button>
+<body> -->
+<!-- <button onclick="enterpill()">ادخل الفاتورة </button>
     <button onclick="enterdescount()"> خصم </button>
     <button onclick="enteradvantage()"> ضريبة</button> -->
-    <h3>calculator</h3>
+<!-- <h3>calculator</h3>
      <button onclick="enternumber1()">enternum1</button>
     <button onclick="enternumber2()">enternum2</button> 
     <button onclick="summition()">+</button> 
@@ -25,11 +25,61 @@
         <button  style="border:3px solid black; display: block; margin-bottom: 5px;" onclick="microwaveon()">ON</button>
         <button onclick="timeon()"  style="border:3px solid blue; display: block; margin-bottom: 5px;">time</button>
         <button onclick="microwaveoff()" style="border:3px solid #123; display: block;">OFF</button>
-    </div>
-    <!-- <button onclick="showphoneAndprice()">showphoneandpric</button>
+    </div> -->
+<!-- <button onclick="showphoneAndprice()">showphoneandpric</button>
     <button onclick="addphone()">add phone</button>
     <button onclick="addprice()">add price</button> -->
-    <!-- <button onclick="showtask()">showtasks</button>
-    <button onclick="removetask()">removetask</button> -->
+<!-- <button onclick="showtask()">showtasks</button>
+    <button onclick="removetask()">removetask</button>
+    <button onclick="updatetask()">updatetask</button>  
+ </body>
+</html> -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- lec15 21/8 -->
+<!-- <!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+</head>
+
+<body>
+    <div class="col-12 d-flex flex-wrap">
+        <div class="col-12 d-flex flex-wrap bg-dark text-white p-3 gap-2">
+            <input id="phoneName" class="form-control" placeholder="Enter Phone Name" />
+            <input id="phonePrice" class="form-control" type="number" placeholder="Enter Phone Price" />
+            <button onclick="addNewProduct()" class="btn btn-success">Add</button>
+        </div>
+        <table class="table table-dark table-bordered">
+            <thead>
+                <tr>
+                    <th>-</th>
+                    <th>Item Name</th>
+                    <th>Item Price</th>
+                    <th>Remove Item</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+    </div>
+    <script src="./script.js"></script>
 </body>
-</html>
+
+</html> -->
